--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -10056,6 +10056,101 @@ var hammingDistance = function(x, y) {
 
 ---
 
+## 462. 最少移动次数使数组元素相等 II
+
+给你一个长度为 n 的整数数组 nums ，返回使所有数组元素相等需要的最少移动数。
+
+在一步操作中，你可以使数组中的一个元素加 1 或者减 1 。
+提示：
+
+n == nums.length
+1 <= nums.length <= 105
+-109 <= nums[i] <= 109
+
+排序
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var minMoves2 = function(nums) {
+    let n = nums.length;
+    nums.sort((a,b) => a - b);
+    let ans = 0;
+    let x = nums[Math.floor(n / 2)];
+    for (let i = 0; i < n; i++){
+        ans += Math.abs(nums[i] - x);
+    }
+    return ans;
+};
+
+let nums = [1,10,2,9];
+let result = minMoves2(nums)
+console.log(result);
+```
+
+快速选择
+
+求解数组第 *k* 小元素可以使用快速选择算法
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var minMoves2 = function(nums) {
+    let n = nums.length;
+    let x = quickSelect(nums, 0, n - 1, Math.floor(n / 2));
+    let ans = 0;
+    for (let i = 0; i < n; i++){
+        ans += Math.abs(nums[i] - x);
+    }
+    return ans;
+};
+
+const quickSelect = (nums, left, right, index) => {
+    const q = randomPartition(nums, left, right);
+    if (q === index) {
+        return nums[q];
+    }else{
+        return q < index ? quickSelect(nums, q + 1, right, index) : quickSelect(nums, left, q - 1, index);
+    }
+}
+
+const randomPartition = (nums, left, right) => {
+    const i = Math.floor(Math.random() * (right - left + 1)) + left;
+    swap(nums, i, right);
+    return partition(nums, left, right);
+}
+
+const partition = (nums, left, right) => {
+    let x = nums[right], i = left - 1;
+    for (let j = left; j < right; ++j){
+        if (nums[j] <= x) {
+            ++i;
+            swap(nums, i, j);
+        }
+    }
+    swap(nums, i + 1, right);
+    return i + 1;
+}
+
+const swap = (nums, index1, index2) => {
+    let temp = nums[index1];
+    nums[index1] = nums[index2];
+    nums[index2] = temp;
+}
+
+let nums = [1,10,2,9];
+let result = minMoves2(nums)
+console.log(result);
+```
+
+
+
+---
+
 ## 463.岛屿的周长
 
 给定一个 row x col 的二维网格地图 grid ，其中：grid[i][j] = 1 表示陆地， grid[i][j] = 0 表示水域。
@@ -11387,6 +11482,100 @@ let result = reverseStr(s, k);
 console.log(result);
 ```
 
+---
+
+## 543. 二叉树的直径
+
+给定一棵二叉树，你需要计算它的直径长度。一棵二叉树的直径长度是任意两个结点路径长度中的最大值。这条路径可能穿过也可能不穿过根结点。
+注意：两结点之间的路径长度是以它们之间边的数目表示。
+
+首先我们知道一条路径的长度为该路径经过的节点数减一，所以求直径（即求路径长度的最大值）等效于求路径经过节点数的最大值减一。
+
+而任意一条路径均可以被看作由某个节点为起点，从其左儿子和右儿子向下遍历的路径拼接得到。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var diameterOfBinaryTree = function(root) {
+    let ans = 1;
+
+    const dfs = (head) => {
+        if (head === null) {
+            return 0;  // 访问到空节点了，返回0
+        }
+        let leftDepth = dfs(head.left);  //左儿子为根的子树的深度
+        let rightDepth = dfs(head.right);  //右儿子为根的子树的深度
+        ans = Math.max(ans, leftDepth + rightDepth + 1);  //节点head为起点的路径经过节点数的最大值为L+R+1 ,并更新ans
+        return Math.max(leftDepth, rightDepth) + 1;  // 返回该节点为根的子树的深度
+    }
+
+    dfs(root);
+    return ans - 1;  //最后返回 ans-1 即为树的直径。
+};
+```
+
+---
+
+## 551. 学生出勤记录 I
+
+给你一个字符串 s 表示一个学生的出勤记录，其中的每个字符用来标记当天的出勤情况（缺勤、迟到、到场）。记录中只含下面三种字符：
+
+'A'：Absent，缺勤
+'L'：Late，迟到
+'P'：Present，到场
+如果学生能够 同时 满足下面两个条件，则可以获得出勤奖励：
+
+按 总出勤 计，学生缺勤（'A'）严格 少于两天。
+学生 不会 存在 连续 3 天或 连续 3 天以上的迟到（'L'）记录。
+如果学生可以获得出勤奖励，返回 true ；否则，返回 false 。
+
+ 提示：
+
+1 <= s.length <= 1000
+s[i] 为 'A'、'L' 或 'P'
+
+```js
+/**
+ * @param {string} s
+ * @return {boolean}
+ */
+var checkRecord = function(s) {
+    let absent = 0;
+    let late = 0;
+    for (let i = 0; i < s.length; i++){
+        if (s[i] === "A") {
+            absent++;
+            if (absent > 1){
+                return false;
+            }
+            late = 0;
+        }else if (s[i] === "L") {
+            late++;
+            if (late > 2) {
+                return false;
+            }
+        }else if (s[i] === "P") {
+            late = 0;
+        }
+    }
+    return true;
+};
+
+let s = "PPALLP";
+let result=checkRecord(s);
+console.log(result);
+```
+
 
 
 ---
@@ -12180,11 +12369,81 @@ n == forest[i].length
 1 <= m, n <= 50
 0 <= forest[i][j] <= 109
 
-```
+**广度优先搜索**
 
 ```
+const dirs = [[-1, 0], [1, 0], [0, -1], [0, 1]];
+var cutOffTree = function(forest) {
+    const trees = [];
+    const row = forest.length;
+    const col = forest[0].length;
+    for (let i = 0; i < row; ++i) {
+        for (let j = 0; j < col; ++j) {
+            if (forest[i][j] > 1) {
+                trees.push([i, j]);
+            }
+        }
+    }
+    trees.sort((a, b) => forest[a[0]][a[1]] - forest[b[0]][b[1]]);
 
+    let cx = 0;
+    let cy = 0;
+    let ans = 0;
+    for (let i = 0; i < trees.length; ++i) {
+        let steps = bfs(forest, cx, cy, trees[i][0], trees[i][1]);
+        if (steps === -1) {
+            return -1;
+        }
+        ans += steps;
+        cx = trees[i][0];
+        cy = trees[i][1];
+    }
+    return ans;
+};
 
+const bfs = (forest, sx, sy, tx, ty) => {
+    if (sx === tx && sy === ty) {
+        return 0;
+    }
+
+    const row = forest.length;
+    const col = forest[0].length;
+    let step = 0;
+    const queue = [];
+    const visited = new Array(row).fill(0).map(() => new Array(col).fill(0));
+    queue.push([sx, sy]);
+    visited[sx][sy] = true;
+    while (queue.length) {
+        step++;
+        const sz = queue.length;
+        for (let i = 0; i < sz; ++i) {
+            const cell = queue.shift();
+            const cx = cell[0], cy = cell[1];
+            for (let j = 0; j < 4; ++j) {
+                const nx = cx + dirs[j][0];
+                const ny = cy + dirs[j][1];
+                if (nx >= 0 && nx < row && ny >= 0 && ny < col) {
+                    if (!visited[nx][ny] && forest[nx][ny] > 0) {
+                        if (nx === tx && ny === ty) {
+                            return step;
+                        }
+                        queue.push([nx, ny]);
+                        visited[nx][ny] = true;
+                    }
+                }
+            }
+        }
+    }
+    return -1;
+}
+
+```
+
+Dijkstra **算法**
+
+**A* 启发式搜索算法**
+
+----
 
 ## 682. 棒球比赛
 
