--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -11615,10 +11615,58 @@ console.log(result);
 ```
 
 
----
 
 
 ----
+
+## 557. 反转字符串中的单词 III
+
+给定一个字符串 s ，你需要反转字符串中每个单词的字符顺序，同时仍保留空格和单词的初始顺序。
+提示：
+
+1 <= s.length <= 5 * 104
+s 包含可打印的 ASCII 字符。
+s 不包含任何开头或结尾空格。
+s 里 至少 有一个词。
+s 中的所有单词都用一个空格隔开。
+
+```js
+/**
+ * @param {string} s
+ * @return {string}
+ */
+var reverseWords = function(s) {
+    s = s.split("");
+    let n = s.length;
+    let start = 0;
+    for (let i = 0; i < n; i++){
+        if (s[i] === " ") {
+            swap(s, start,i - 1);
+            start = i + 1;
+        }
+    }
+    swap(s, start, n - 1);
+    return s.join("");
+
+};
+var swap = function(arr, left, right){
+    while(left < right){
+        let temp = arr[left];
+        arr[left] = arr[right];
+        arr[right] = temp;
+        left++;
+        right--;
+    }
+}
+
+let s = "Let's take LeetCode contest";
+let result = reverseWords(s);
+console.log(result);
+```
+
+
+
+---
 
 ## 564. 寻找最近的回文数
 
@@ -14751,7 +14799,48 @@ var repeatedNTimes = function(nums) {
 
 ---
 
+## 965. 单值二叉树
 
+如果二叉树每个节点都具有相同的值，那么该二叉树就是单值二叉树。
+
+只有给定的树是单值二叉树时，才返回 true；否则返回 false。
+提示：
+
+给定树的节点数范围是 [1, 100]。
+每个节点的值都是整数，范围为 [0, 99] 。
+
+一棵树的所有节点都有相同的值，当且仅当对于树上的每一条边的两个端点，它们都有相同的值（这样根据传递性，所有节点都有相同的值）。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {boolean}
+ */
+var isUnivalTree = function(root) {
+    if (root === null) {
+        return true;
+    }
+    if (root.left !== null) {
+        if (root.val !== root.left.val || !isUnivalTree(root.left)) {
+            return false;
+        }
+    }
+    if (root.right !== null) {
+        if (root.val !== root.right.val || !isUnivalTree(root.right)) {
+            return false;
+        }
+    }
+    return true;
+};
+```
 
 
 
@@ -17652,4 +17741,6 @@ let str1=[1,2,3,4,5];
 let result=subArrayRanges(str1);
 console.log(result);
 ```
+
+---
 
