--- a/牛客刷题题目/企业前端笔试题目.md
+++ b/牛客刷题题目/企业前端笔试题目.md
@@ -288,3 +288,431 @@ solution(nums);
 
 ---
 
+### 多多的魔术盒子
+
+多多鸡有N个魔术盒子（编号1～N），其中编号为i的盒子里有i个球。
+多多鸡让皮皮虾每次选择一个数字X（1 <= X <= N），多多鸡就会**把球数量大于等于X个的盒子里的球减少X个**。
+通过观察，皮皮虾已经掌握了其中的奥秘，并且发现只要通过一定的操作顺序，可以用最少的次数将所有盒子里的球变没。
+
+那么请问聪明的你，是否已经知道了应该如何操作呢？
+
+##### **输入描述:**
+
+```
+第一行，有1个整数T，表示测试用例的组数。
+（1 <= T <= 100）
+接下来T行，每行1个整数N，表示有N个魔术盒子。
+（1 <= N <= 1,000,000,000）
+```
+
+##### **输出描述:**
+
+```
+共T行，每行1个整数，表示要将所有盒子的球变没，最少需要进行多少次操作。
+```
+
+##### **输入例子1:**
+
+```
+3
+1
+2
+5
+```
+
+##### **输出例子1:**
+
+```
+1
+2
+3
+```
+
+要用最少的次数把所有盒子减到0，第一次必然是减少中间盒子的球数
+
+比如 1，2，3，4，5， 第一次减3 得到1，2，0，1，2 ,这时我们可以看到左右两边相等的，分冶求解
+
+```js
+function solution(nums, n){
+	const dfs = (num) => {
+		if (num < 3) {
+			return num;
+		}else{
+			return 1 + dfs(Math.floor(num / 2));
+		}
+	}
+
+	for (let i = 0; i < n; i++){
+		console.log(dfs(nums[i]));
+	}
+}
+
+let N = parseInt(readline());
+let nums = [];
+let i = 0;
+while (i < N){
+	let line = parseInt(readline());
+	nums.push(line);
+	i++;
+}
+solution(nums, N);
+
+// let nums = [1, 2, 5];
+// solution(nums, 3);
+```
+
+---
+
+### 多多的排列函数
+
+数列 {An} 为N的一种排列。
+
+例如N=3，可能的排列共6种：
+
+```
+1, 2, 3
+1, 3, 2
+2, 1, 3
+2, 3, 1
+3, 1, 2
+3, 2, 1
+```
+
+定义函数F:
+
+![img](https://www.nowcoder.com/equation?tex=F(x)%20%3D%20%5Cleft%5C%7B%0A%5Cbegin%7Baligned%7D%0A%26%20A_1%20%26%20(x%20%3D%201)%20%5C%5C%0A%26%20%7C%20F(x%20-%201)%20-%20A_x%20%7C%20%26%20(x%20%3E%201)%20%5C%5C%0A%5Cend%7Baligned%7D%0A%5Cright.)
+
+其中|X|表示X的绝对值。
+
+现在多多鸡想知道，在所有可能的数列 {An} 中，F(N)的最小值和最大值分别是多少。
+
+
+
+##### **输入描述:**
+
+```
+第一行输入1个整数T，表示测试用例的组数。
+( 1 <= T <= 10 )
+第二行开始，共T行，每行包含1个整数N，表示数列 {An} 的元素个数。
+( 1 <= N <= 100,000 )
+```
+
+##### **输出描述:**
+
+```
+共T行，每行2个整数，分别表示F(N)最小值和最大值
+```
+
+##### **输入例子1:**
+
+```
+2
+2
+3
+```
+
+##### **输出例子1:**
+
+```
+1 1
+0 2
+```
+
+##### **例子说明1:**
+
+```
+对于N=3：
+- 当{An}为3，2，1时可以得到F(N)的最小值0
+- 当{An}为2，1，3时可以得到F(N)的最大值2
+```
+
+```
+F(1)=A1
+F(2) = |F(1)-A2| =|A1-A2|
+F(3) = |F(2)-A3| =||A1-A2|-A3|
+```
+
+每四个数 例如 5，6，7，8，我们把它们两两一组 |||8-6|-7|-5|=0，最小值是0；猜测最小值的变化也是4个一组 
+
+  看到min只有2种取值。0，1，最大值自然就是N-getmin(N-1)
+
+```js
+function solution(nums, n){
+	const getMinFn = (num) => {
+		num %= 4;
+		if (num === 0 || num ===3) {
+			return 0;
+		}else{
+			return 1;
+		}
+	}
+	const getMaxFn = (num) => {
+		return num - getMinFn(num - 1);
+	}
+
+	for (let i = 0; i < n; i++){
+		console.log(getMinFn(nums[i]) + " " + getMaxFn(nums[i]));
+	}
+}
+
+let N = parseInt(readline());
+let nums = [];
+let i = 0;
+while (i < N){
+	let line = parseInt(readline());
+	nums.push(line);
+	i++;
+}
+solution(nums, N);
+
+// let nums = [2, 3, 5];
+// solution(nums, 3);
+```
+
+---
+
+### 多多的电子字典
+
+多多鸡打算造一本自己的电子字典，里面的所有单词都只由a和b组成。
+每个单词的组成里a的数量不能超过N个且b的数量不能超过M个。
+多多鸡的幸运数字是K，它打算把所有满足条件的单词里的字典序第K小的单词找出来，作为字典的封面。
+
+##### **输入描述:**
+
+```
+共一行，三个整数N, M, K。(0 < N, M < 50, 0 < K < 1,000,000,000,000,000)
+```
+
+##### **输出描述:**
+
+```
+共一行，为字典序第K小的单词。
+```
+
+##### **输入例子1:**
+
+```
+2 1 4
+```
+
+##### **输出例子1:**
+
+```
+ab
+```
+
+##### **例子说明1:**
+
+```
+满足条件的单词里，按照字典序从小到大排列的结果是
+a
+aa
+aab
+ab
+aba
+b
+ba
+baa
+```
+
+```
+
+dp[n][m]表示n个a，m个b的单词数量
+dp[n][m] = 1 + dp[n-1][m] + 1 + dp[n][m-1]
+根据K倒推，是前半部分，还是后半部分，来确定第一个字母是 a，还是b
+```
+
+```
+function solution(n, m, k){
+	const dp = new Array(n);
+	for (let i = 0; i < n; i++){
+		dp[i]=new Array(m);
+		dp[i][0]= i.toString();
+	}
+	for (let i = 0; i < m; i++){
+		dp[0][i] = i.toString();
+	}
+	for (let i = 1; i <=n; i++){
+		for (let j = 1; j <= m; j++){
+			dp[i][j] = 1 + dp[i - 1][j] + 1 + dp[i][ j - 1];
+		}
+	}
+	while (k > 0){
+		if (n > 0 && m > 0) {
+			if (dp[n - 1][m]) {}
+		}
+	}
+}
+
+// let line1 = readline().split(" ");
+// let N = parseInt(line1[0]);
+// let M = parseInt(line1[1]);
+// let K = parseInt(line1[2]);
+
+// solution(N, M, K);
+
+solution(2, 1, 4);
+```
+
+---
+
+### 骰子期望
+
+```
+扔n个骰子，第i个骰子有可能投掷出Xi种等概率的不同的结果，数字从1到Xi。所有骰子的结果的最大值将作为最终结果。求最终结果的期望。
+```
+
+##### **输入描述:**
+
+```
+第一行一个整数n，表示有n个骰子。（1 <= n <= 50）
+第二行n个整数，表示每个骰子的结果数Xi。(2 <= Xi <= 50)
+```
+
+##### **输出描述:**
+
+```
+输出最终结果的期望，保留两位小数。
+```
+
+##### **输入例子1:**
+
+```
+2
+2 2
+```
+
+##### **输出例子1:**
+
+```
+1.75
+```
+
+对于最终结果k，只要n个骰子中有一个掷出了k，其余的点数均小于等于k，那最终结果就是k。 
+
+  A.计所有骰子的点数都不超过k的概率为P(x<=k) 
+
+  B.计所有骰子的点数都小于k的概率为P(x<=k-1) 
+
+  很明显，事件A是包含事件B的，最终结果为k（即事件A-B）的概率为P(x=k)=P(x<=k)-P(x<=k-1)。而对于一组骰子X=[X1,X2,...,Xn]，最终结果的可能取值就是[2,max(X)]
+
+```js
+function solution(nums, n){
+	//计算最大的点数
+	let maxPoint = 0;
+	for (let i = 0; i < n; i++){
+		maxPoint = Math.max(maxPoint, nums[i]);
+	}
+	let preE = 0;
+	let ans = 0;
+	for (let k = 1; k <= maxPoint; k++){
+		let curE = 1;
+		//计算每个骰子点数不超过k的概率，注意有些骰子掷不到点数k
+		for (let i = 0; i < n; i++){
+			curE *= Math.min(k, nums[i]) / nums[i];
+		}
+		ans += (curE - preE) * k;
+		preE = curE;
+	}
+	console.log(ans.toFixed(2));
+}
+
+let N = parseInt(readline());
+let line2 = readline().split(" ");
+let nums = [];
+let i = 0;
+while (i < N){
+	nums.push(parseInt(line2[i]));
+	i++;
+}
+solution(nums, N);
+
+//solution([2, 2], 2);
+```
+
+---
+
+### 二维表第k大数
+
+在一块长为n，宽为m的场地上，有n✖️m个1✖️1的单元格。每个单元格上的数字就是按照从1到n和1到m中的数的乘积。具体如下
+
+```
+n = 3, m = 3
+1   2   3
+2   4   6
+3   6   9
+```
+
+给出一个查询的值k，求出按照这个方式列举的的数中第k大的值v。
+
+例如上面的例子里，
+
+从大到小为(9, 6, 6, 4, 3, 3, 2, 2, 1)
+
+```
+k = 1, v = 9
+k = 2, v = 6
+k = 3, v = 6
+...
+k = 8, v = 2
+k = 9, v = 1
+```
+
+##### **输入描述:**
+
+```
+只有一行是3个数n, m, k 表示场地的宽高和需要查询的k。使用空格隔开。
+```
+
+##### **输出描述:**
+
+```
+给出第k大的数的值。
+```
+
+##### **输入例子1:**
+
+```
+3 3 4
+```
+
+##### **输出例子1:**
+
+```
+4
+```
+
+二分查找
+
+```js
+function solution(n, m, k){
+	let left = 0, right = m * n;
+	k = m * n - k + 1;
+	while(left <= right){
+		let mid = (left + right) >> 1;
+		// 假定以mid作为最大数的所在行curRow; 由矩阵的特点可知：
+		// curRow的上一行所有的数都将小于mid，缩小查找范围
+		let curRow = mid / m;
+		// 同理，获取所在列curCol
+		let curCol = mid / n;
+		let cnt = curRow * m + curCol * (n - curRow);
+		// 剩下右下角一个小矩形
+		for (let i = curRow + 1; i <= n; i++){
+			for (let j = curCol + 1; j <= m && (i * j <= mid); j++){
+				cnt++;
+			}
+		}
+		if (cnt < k) {
+			left = mid + 1;
+		}else{
+			right = mid - 1;
+		}
+	}
+	console.log(left);
+}
+
+solution(3,3,4);
+```
+
+---
+
