--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -10242,6 +10242,55 @@ var canIWin = function(maxChoosableInteger, desiredTotal) {
 };
 ```
 
+---
+
+## 467. 环绕字符串中唯一的子字符串
+
+把字符串 s 看作是 “abcdefghijklmnopqrstuvwxyz” 的无限环绕字符串，所以 s 看起来是这样的：
+
+"...zabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcd...." . 
+现在给定另一个字符串 p 。返回 s 中 唯一 的 p 的 非空子串 的数量 。 
+
+提示:
+
+1 <= p.length <= 105
+p 由小写英文字母构成
+
+**动态规划**
+
+```
+/**
+ * @param {string} p
+ * @return {number}
+ */
+var findSubstringInWraproundString = function(p) {
+    let ans = 0;
+    const dp = new Array(26).fill(0);
+    let k = 0;
+    for (let i = 0; i < p.length; i++){
+        if (i > 0 && (p[i].charCodeAt() - p[i - 1].charCodeAt() + 26) % 26 === 1) {
+            k++;
+        }else{
+            k = 1;
+        }
+        let index = p[i].charCodeAt() - 'a'.charCodeAt();
+        //对于两个以同一个字符结尾的子串，长的那个子串必然包含短的那个
+        //知道了最长长度，也就知道了不同的子串的个数。
+        dp[index] = Math.max(dp[index], k);
+    }
+    dp.forEach((num) => {
+        ans += num;
+    });
+    return ans;
+};
+
+let p = "zab";
+let result = findSubstringInWraproundString(p);
+console.log(result);
+```
+
+
+
 
 
 
@@ -11664,6 +11713,143 @@ let result = reverseWords(s);
 console.log(result);
 ```
 
+---
+
+## 559. N 叉树的最大深度
+
+给定一个 N 叉树，找到其最大深度。
+
+最大深度是指从根节点到最远叶子节点的最长路径上的节点总数。
+
+N 叉树输入按层序遍历序列化表示，每组子节点由空值分隔（请参见示例）。
+
+提示：
+
+树的深度不会超过 1000 。
+树的节点数目位于 [0, 104] 之间。
+
+**广度优先搜索**
+
+```js
+/**
+ * // Definition for a Node.
+ * function Node(val,children) {
+ *    this.val = val;
+ *    this.children = children;
+ * };
+ */
+
+/**
+ * @param {Node|null} root
+ * @return {number}
+ */
+var maxDepth = function(root) {
+    if (root === null) {
+        return 0;
+    }
+    let arr = [root];
+    let ans = 0;
+    while(arr.length){
+        let len = arr.length;
+        while(len > 0){
+            let node = arr.shift();
+            if (node.children.length > 0) {
+                arr = arr.concat(node.children);
+            }
+            len--;
+        }
+        ans++;
+    }
+    return ans;
+};
+```
+
+**深度优先搜索**
+
+```js
+var maxDepth = function(root) {
+    if (!root) {
+        return 0;
+    }
+    let maxChildDepth = 0;
+    const children = root.children;
+    for (const child of children) {
+        const childDepth = maxDepth(child);
+        maxChildDepth = Math.max(maxChildDepth, childDepth);
+    }
+    return maxChildDepth + 1;
+};
+
+```
+
+---
+
+## 561. 数组拆分 I
+
+给定长度为 2n 的整数数组 nums ，你的任务是将这些数分成 n 对, 例如 (a1, b1), (a2, b2), ..., (an, bn) ，使得从 1 到 n 的 min(ai, bi) 总和最大。
+
+返回该 最大总和 。
+
+提示：
+
+1 <= n <= 104
+nums.length == 2 * n
+-104 <= nums[i] <= 104
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var arrayPairSum = function(nums) {
+    nums = nums.sort((a, b) => a - b);
+    let ans = 0;
+    for (let i = 0; i < nums.length; i +=2){
+        ans += nums[i];
+    }
+    return ans;
+};
+
+let nums = [1,4,3,2];
+let result = arrayPairSum(nums);
+console.log(result);
+```
+
+---
+
+## 563. 二叉树的坡度
+
+给你一个二叉树的根节点 root ，计算并返回 整个树 的坡度 。
+
+一个树的 节点的坡度 定义即为，该节点左子树的节点之和和右子树节点之和的 差的绝对值 。如果没有左子树的话，左子树的节点之和为 0 ；没有右子树的话也是一样。空结点的坡度是 0 。
+
+整个树 的坡度就是其所有节点的坡度之和。
+
+提示：
+
+树中节点数目的范围在 [0, 104] 内
+-1000 <= Node.val <= 1000
+
+```js
+var findTilt = function(root) {
+    let ans = 0;
+
+    const dfs = (node) => {
+        if (!node) {
+            return 0;
+        }
+        const sumLeft = dfs(node.left);
+        const sumRight = dfs(node.right);
+        ans += Math.abs(sumLeft - sumRight);
+        return sumLeft + sumRight + node.val;
+    }
+
+    dfs(root);
+    return ans;
+};
+
+```
+
 
 
 ---
@@ -11720,6 +11906,117 @@ console.log(result);
 
 
 ---
+## 566. 重塑矩阵
+
+在 MATLAB 中，有一个非常有用的函数 reshape ，它可以将一个 m x n 矩阵重塑为另一个大小不同（r x c）的新矩阵，但保留其原始数据。
+
+给你一个由二维数组 mat 表示的 m x n 矩阵，以及两个正整数 r 和 c ，分别表示想要的重构的矩阵的行数和列数。
+
+重构后的矩阵需要将原始矩阵的所有元素以相同的 行遍历顺序 填充。
+
+如果具有给定参数的 reshape 操作是可行且合理的，则输出新的重塑矩阵；否则，输出原始矩阵。
+
+提示：
+
+m == mat.length
+n == mat[i].length
+1 <= m, n <= 100
+-1000 <= mat[i][j] <= 1000
+1 <= r, c <= 300
+
+```js
+/**
+ * @param {number[][]} mat
+ * @param {number} r
+ * @param {number} c
+ * @return {number[][]}
+ */
+var matrixReshape = function(mat, r, c) {
+    let m = mat.length;
+    let n = mat[0].length;
+    if (m * n !== r * c){
+        return mat;
+    }
+    const ans = [];
+    let m0 = 0, n0 = 0;
+    for (let i = 0; i < r; i++){
+        let temp =[];
+        for (let j = 0; j < c; j++){
+            if (n0 === n) {
+                n0 = 0;
+                m0++;
+            }
+            temp.push(mat[m0][n0]);
+            n0++;
+        }
+        ans.push(temp);
+    }
+    return ans;
+};
+
+let mat = [[1,2],[3,4]], r = 1, c = 4;
+let result = matrixReshape(mat, r, c);
+console.log(result);
+```
+
+```js
+var matrixReshape = function(nums, r, c) {
+    const m = nums.length;
+    const n = nums[0].length;
+    if (m * n != r * c) {
+        return nums;
+    }
+
+    const ans = new Array(r).fill(0).map(() => new Array(c).fill(0));
+    for (let x = 0; x < m * n; ++x) {
+        //形象化地来说，我们把这个二维数组「排扁」成了一个一维数组,可以将整数 x 映射回其在矩阵中的下标
+        ans[Math.floor(x / c)][x % c] = nums[Math.floor(x / n)][x % n];
+    }
+    return ans;
+};
+
+```
+
+---
+
+## 572. 另一棵树的子树
+
+给你两棵二叉树 root 和 subRoot 。检验 root 中是否包含和 subRoot 具有相同结构和节点值的子树。如果存在，返回 true ；否则，返回 false 。
+
+二叉树 tree 的一棵子树包括 tree 的某个节点和这个节点的所有后代节点。tree 也可以看做它自身的一棵子树。
+提示：
+
+root 树上的节点数量范围是 [1, 2000]
+subRoot 树上的节点数量范围是 [1, 1000]
+-104 <= root.val <= 104
+-104 <= subRoot.val <= 104
+
+```
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @param {TreeNode} subRoot
+ * @return {boolean}
+ */
+var isSubtree = function(root, subRoot) {
+    if (true) {}
+};
+
+```
+
+
+
+
+
+---
+
 ## 587.安装栅栏
 
 在一个二维的花园中，有一些用 (x, y) 坐标表示的树。由于安装费用十分昂贵，你的任务是先用最短的绳子围起所有的树。只有当所有的树都被绳子包围时，花园才能围好栅栏。你需要找到正好位于栅栏边界上的树的坐标。
@@ -12772,6 +13069,54 @@ var hasAlternatingBits = function(n) {
 
 
 ---
+## 699. 掉落的方块
+
+在无限长的数轴（即 x 轴）上，我们根据给定的顺序放置对应的正方形方块。
+
+第 i 个掉落的方块（positions[i] = (left, side_length)）是正方形，其中 left 表示该方块最左边的点位置(positions[i][0])，side_length 表示该方块的边长(positions[i][1])。
+
+每个方块的底部边缘平行于数轴（即 x 轴），并且从一个比目前所有的落地方块更高的高度掉落而下。在上一个方块结束掉落，并保持静止后，才开始掉落新方块。
+
+方块的底边具有非常大的粘性，并将保持固定在它们所接触的任何长度表面上（无论是数轴还是其他方块）。邻接掉落的边不会过早地粘合在一起，因为只有底边才具有粘性。
+
+ 
+
+返回一个堆叠高度列表 ans 。每一个堆叠高度 ans[i] 表示在通过 positions[0], positions[1], ..., positions[i] 表示的方块掉落结束后，目前所有已经落稳的方块堆叠的最高高度。
+
+
+注意:
+
+1 <= positions.length <= 1000.
+1 <= positions[i][0] <= 10^8.
+1 <= positions[i][1] <= 10^6.
+
+```
+var fallingSquares = function(positions) {
+    const n = positions.length;
+    const heights = [];
+    for (let i = 0; i < n; i++) {
+        let left1 = positions[i][0], right1 = positions[i][0] + positions[i][1] - 1;
+        let height = positions[i][1];
+        for (let j = 0; j < i; j++) {
+            let left2 = positions[j][0], right2 = positions[j][0] + positions[j][1] - 1;
+            if (right1 >= left2 && right2 >= left1) {
+                height = Math.max(height, heights[j] + positions[i][1]);
+            }
+        }
+        heights.push(height);
+    }
+    for (let i = 1; i < n; i++) {
+        heights.splice(i, 1, Math.max(heights[i], heights[i - 1]));
+    }
+    return heights;
+};
+
+```
+
+
+
+----
+
 ## 713. 乘积小于 K 的子数组
 
 给你一个整数数组 nums 和一个整数 k ，请你返回子数组内所有元素的乘积严格小于 k 的连续子数组的数目。
