--- a/牛客刷题题目/企业前端笔试题目.md
+++ b/牛客刷题题目/企业前端笔试题目.md
@@ -716,3 +716,351 @@ solution(3,3,4);
 
 ---
 
+### 选靓号
+
+```
+A 国的手机号码由且仅由 N 位十进制数字(0-9)组成。一个手机号码中有至少 K 位数字相同则被定义为靓号。A 国的手机号可以有前导零，比如 000123456 是一个合法的手机号。
+小多想花钱将自己的手机号码修改为一个靓号。修改号码中的一个数字需要花费的金额为新数字与旧数字之间的差值。比如将 1 修改为 6 或 6 修改为 1 都需要花 5 块钱。
+给出小多现在的手机号码，问将其修改成一个靓号，最少需要多少钱？
+```
+
+##### **输入描述:**
+
+```
+第一行包含2个整数 N、K，分别表示手机号码数字个数以及靓号至少有 K 个数字相同。
+第二行包含 N 个字符，每个字符都是一个数字('0'-'9')，数字之间没有任何其他空白符。表示小多的手机号码。
+数据范围：
+2 <= K <= N <= 10000
+```
+
+##### **输出描述:**
+
+```
+第一行包含一个整数，表示修改成一个靓号，最少需要的金额。
+第二行包含 N 个数字字符，表示最少花费修改的新手机号。若有多个靓号花费都最少，则输出字典序最小的靓号。
+```
+
+##### **输入例子1:**
+
+```
+6 5
+787585
+```
+
+##### **输出例子1:**
+
+```
+4
+777577
+```
+
+##### **例子说明1:**
+
+```
+花费为4的方案有两种：777577与777775，前者字典序更小。
+```
+
+
+
+```
+
+思路：遍历0-9每一个数字，计算每一个数字出现k次时候的最小花费
+细节：
+1.计算过程中使用gap表示距离当前数字i的花费
+2.因为要输出具体变化后的结果，所以需要考虑如何变化，如果要变化的值小于当前值，则从前往后替代，如果大于当前值，则从后往前替代（为了保证字典序最小）
+```
+
+```js
+
+function solution(phoneNumber, n, k) {
+	//得到0-9在原手机号中出现的次数
+	const numberCountArr = new Array(10).fill(0);
+	for (let i = 0; i < n; i++){
+		numberCountArr[parseInt(phoneNumber[i])]++;
+	}
+	//最小代价优先的贪心算法
+	let minCost = Number.MAX_SAFE_INTEGER;
+	let ans = [];
+	for (let i = 0; i < 10; i++){
+		let tempK = k - numberCountArr[i];
+		if (tempK <= 0) {
+			//初始可能重复数字次数就大于需求值
+			minCost = 0;
+			ans = phoneNumber.split("");
+			break;
+		}
+		//每次循环前都初始为phoneNum的复制
+		let tempArr = new Array(n);
+		for (let j = 0; j < n; j++){
+			tempArr[j] = parseInt(phoneNumber[j]);
+		}
+		let tempCost = 0;
+		let left = i - 1;
+		let right = i + 1;
+		while(tempK > 0){
+			//如果手机号中数字比最佳数字大的情况就从前往后改
+			if (right < 10) {
+				for (let a = 0; a < n && tempK > 0; a++){
+					if (tempArr[a] === right) {
+						tempCost += right - i;
+						tempArr[a] = "" + i;
+						tempK--;
+					}
+				}
+			}
+			//如果手机号中数字比最佳数字小的情况就从后往前改
+			if (left >= 0) {
+				for (let a = n - 1; a >= 0 && tempK > 0; a--){
+					if (tempArr[a] === left) {
+						tempCost += i - left;
+						tempArr[a] = "" + i;
+						tempK--;
+					}
+				}
+			}
+			//扩大上下限
+			left--;
+			right++;
+		}
+		if (tempCost < minCost) {
+			minCost = tempCost;
+			ans = tempArr;
+		}
+	}
+	ans = ans.join("");
+	console.log(minCost);
+	console.log(ans);
+}
+
+
+let line1 = readline().trim().split(" ");
+let N = parseInt(line1[0]);
+let K = parseInt(line1[1]);
+let phoneNumber = readline().trim();
+solution(phoneNumber, N, K);
+
+// let phoneNumber = "787585";
+// solution(phoneNumber, 6, 5);
+```
+
+
+
+----
+
+### 种树
+
+```
+小多想在美化一下自己的庄园。他的庄园毗邻一条小河，他希望在河边种一排树，共 M 棵。小多采购了 N 个品种的树，每个品种的数量是 Ai (树的总数量恰好为 M)。但是他希望任意两棵相邻的树不是同一品种的。小多请你帮忙设计一种满足要求的种树方案。
+```
+
+##### **输入描述:**
+
+```
+第一行包含一个正整数 N，表示树的品种数量。
+第二行包含 N 个正整数，第 i (1 <= i <= N) 个数表示第 i 个品种的树的数量。
+数据范围：
+1 <= N <= 1000
+1 <= M <= 2000
+```
+
+##### **输出描述:**
+
+```
+输出一行，包含 M 个正整数，分别表示第 i 棵树的品种编号 (品种编号从1到 N)。若存在多种可行方案，则输出字典序最小的方案。若不存在满足条件的方案，则输出"-"。
+```
+
+##### **输入例子1:**
+
+```
+3
+4 2 1
+```
+
+##### **输出例子1:**
+
+```
+1 2 1 2 1 3 1
+```
+
+
+
+```
+
+度优先搜索，回溯，剪枝 易错点： 这个题目对于同学们来说做法非常直接，就是递归+回溯，也很容易想。但是因为物品的数量达到了，如果用简单的不进行剪枝的话，是无法跑过所有数据的，因此需要做一些剪枝。 题解：深度优先搜索+剪枝 这个题目的做法很显然，就是使用递归+回溯， 
+```
+
+```
+function solution(nums, n){
+    const m = 0;
+    nums.forEach((v) => {
+        m += v;
+    });
+    let tempArr = new Array(n);
+    for (let i = 0; i < n; i++){
+        if (2 * nums[i] -  m > 1){
+            //当一个品种超过 m/2 + 1时
+            return "-";
+        }
+        tempArr[i] = nums[i];
+    }
+    let ans = [];
+    for (let i = 0; i < n; i++){
+        
+    }
+}
+
+let N = parseInt(readline().trim());
+let nums = readline().trim().split(" ").map((v) => parseInt(v));
+
+solution(nums, N);
+```
+
+
+
+---
+
+### 两两配对差值最小
+
+```
+给定一个长度为偶数的数组arr，将该数组中的数字两两配对并求和，在这些和中选出最大和最小值，请问该如何两两配对，才能让最大值和最小值的差值最小？
+```
+
+##### **输入描述:**
+
+```
+一共2行输入。
+第一行为一个整数n，2<=n<=10000, 第二行为n个数，，组成arr数组，0<=arr[i]<=100。
+```
+
+##### **输出描述:**
+
+```
+输出最小的差值。
+```
+
+##### **输入例子1:**
+
+```
+4
+2 6 4 3
+```
+
+##### **输出例子1:**
+
+```
+1
+```
+
+##### **输入例子2:**
+
+```
+6
+11 4 3 5 7 1
+```
+
+##### **输出例子2:**
+
+```
+3
+```
+
+```
+贪心思想：如果让大的和大的配对，小的和小的配对，那么最大值和最小值的差距将会进一步拉大，因此尽可能让大的和小的配对，这样最大值和最小值的差距才会缩小，数对之和的分布也会尽可能平均。
+```
+
+
+
+```js
+function solution(nums, n){
+    nums = nums.sort((a, b) => a -b);
+    let maxSum = -Number.MAX_SAFE_INTEGER;
+    let minSum = Number.MAX_SAFE_INTEGER;
+    for (let i = 0; i < n / 2; i++){
+    	maxSum = Math.max(nums[i] + nums[n - 1 - i], maxSum);
+    	minSum = Math.min(nums[i] + nums[n - 1 - i], minSum);
+    }
+    console.log(maxSum - minSum);
+}
+
+let N = parseInt(readline().trim());
+let nums = readline().trim().split(" ").map((v) => parseInt(v));
+
+solution(nums, N);
+```
+
+---
+
+### 回合制游戏
+
+你在玩一个回合制角色扮演的游戏。现在你在准备一个策略，以便在最短的回合内击败敌方角色。在战斗开始时，敌人拥有HP格血量。当血量小于等于0时，敌人死去。一个缺乏经验的玩家可能简单地尝试每个回合都攻击。但是你知道辅助技能的重要性。
+在你的每个回合开始时你可以选择以下两个动作之一：聚力或者攻击。
+  聚力会提高你下个回合攻击的伤害。
+  攻击会对敌人造成一定量的伤害。如果你上个回合使用了聚力，那这次攻击会对敌人造成buffedAttack点伤害。否则，会造成normalAttack点伤害。
+给出血量HP和不同攻击的伤害，buffedAttack和normalAttack，返回你能杀死敌人的最小回合数。
+
+##### **输入描述:**
+
+```
+第一行是一个数字HP
+第二行是一个数字normalAttack
+第三行是一个数字buffedAttack
+1 <= HP,buffedAttack,normalAttack <= 10^9
+```
+
+##### **输出描述:**
+
+```
+输出一个数字表示最小回合数
+```
+
+##### **输入例子1:**
+
+```
+13
+3
+5
+```
+
+##### **输出例子1:**
+
+```
+5
+```
+
+
+
+```js
+function solution(HP, normalAttack, buffedAttack){
+	if (HP <= normalAttack) {
+		return 1;
+	}
+	let ans = 0;
+    if (buffedAttack <= normalAttack * 2) {
+    	while(HP > 0){
+    		HP -= normalAttack;
+    		ans++;
+    	}
+    	
+    }else{
+    	while(HP > normalAttack){
+    		HP -= buffedAttack;
+    		ans += 2;
+    	}
+    	if (HP > 0) {
+    		ans++;
+    	}
+    }
+    return ans;
+}
+
+let HP = parseInt(readline().trim());
+let normalAttack = parseInt(readline().trim());
+let buffedAttack = parseInt(readline().trim());
+
+let result = solution(HP, normalAttack, buffedAttack);
+
+console.log(result);
+```
+
+---
+
