--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -12011,7 +12011,136 @@ var isSubtree = function(root, subRoot) {
 
 ```
 
+---
 
+## 575. 分糖果
+
+Alice 有 n 枚糖，其中第 i 枚糖的类型为 candyType[i] 。Alice 注意到她的体重正在增长，所以前去拜访了一位医生。
+
+医生建议 Alice 要少摄入糖分，只吃掉她所有糖的 n / 2 即可（n 是一个偶数）。Alice 非常喜欢这些糖，她想要在遵循医生建议的情况下，尽可能吃到最多不同种类的糖。
+
+给你一个长度为 n 的整数数组 candyType ，返回： Alice 在仅吃掉 n / 2 枚糖的情况下，可以吃到糖的 最多 种类数。
+
+
+提示：
+
+n == candyType.length
+2 <= n <= 104
+n 是一个偶数
+-105 <= candyType[i] <= 105
+
+```js
+var distributeCandies = function(candyType) {
+    const set = new Set(candyType);
+    return Math.min(set.size, candyType.length / 2);
+};
+```
+
+
+
+---
+
+## 584. 寻找用户推荐人
+
+给定表 customer ，里面保存了所有客户信息和他们的推荐人。
+
+```
++------+------+-----------+
+| id   | name | referee_id|
++------+------+-----------+
+|    1 | Will |      NULL |
+|    2 | Jane |      NULL |
+|    3 | Alex |         2 |
+|    4 | Bill |      NULL |
+|    5 | Zack |         1 |
+|    6 | Mark |         2 |
++------+------+-----------+
+```
+
+写一个查询语句，返回一个客户列表，列表中客户的推荐人的编号都 不是 2。
+
+对于上面的示例数据，结果为：
+
+```
++------+
+| name |
++------+
+| Will |
+| Jane |
+| Bill |
+| Zack |
++------+
+```
+
+MySQL 使用三值逻辑 —— TRUE, FALSE 和 UNKNOWN。**任何与 NULL 值进行的比较都会与第三种值 UNKNOWN 做比较**。这个“任何值”包括 NULL 本身！这就是为什么 MySQL 提供 IS NULL 和 IS NOT NULL 两种操作来对 NULL 特殊判断。
+
+因此，在 WHERE 语句中我们需要做一个额外的条件判断 `referee_id IS NULL'。
+
+```mysql
+select name from customer where referee_id != 2 or referee_id is NULL;
+```
+
+---
+
+## 586. 订单最多的客户
+
+表: Orders
+
+```
++-----------------+----------+
+| Column Name     | Type     |
++-----------------+----------+
+| order_number    | int      |
+| customer_number | int      |
++-----------------+----------+
+```
+
+Order_number是该表的主键。
+此表包含关于订单ID和客户ID的信息。
+
+
+编写一个SQL查询，为**下了 最多订单 的客**户查找 customer_number 。
+
+测试用例生成后， 恰好有一个客户 比任何其他客户下了更多的订单。
+
+查询结果格式如下所示。
+
+示例 1:
+
+输入: 
+Orders 表:
+
+```
++--------------+-----------------+
+| order_number | customer_number |
++--------------+-----------------+
+| 1            | 1               |
+| 2            | 2               |
+| 3            | 3               |
+| 4            | 3               |
++--------------+-----------------+
+```
+
+输出: 
+
+```
++-----------------+
+| customer_number |
++-----------------+
+| 3               |
++-----------------+
+```
+
+解释: 
+customer_number 为 '3' 的顾客有两个订单，比顾客 '1' 或者 '2' 都要多，因为他们只有一个订单。
+所以结果是该顾客的 customer_number ，也就是 3 。
+
+
+进阶： 如果有多位顾客订单数并列最多，你能找到他们所有的 customer_number 吗？
+
+```mysql
+select customer_number from orders group by customer_number order by count(*) desc limit 1;
+```
 
 
 
