--- a/力扣/面试题.md
+++ b/力扣/面试题.md
@@ -140,3 +140,46 @@ var inorderSuccessor = function(root, p) {
 
 ---
 
+
+
+## 面试题 17.11. 单词距离
+
+有个内含单词的超大文本文件，给定任意两个不同的单词，找出在这个文件中这两个单词的最短距离(相隔单词数)。如果寻找过程在这个文件中会重复多次，而每次寻找的单词不同，你能对此优化吗?
+
+提示：
+
+words.length <= 100000
+
+```js
+/**
+ * @param {string[]} words
+ * @param {string} word1
+ * @param {string} word2
+ * @return {number}
+ */
+var findClosest = function(words, word1, word2) {
+    let ans = Number.MAX_SAFE_INTEGER;
+    let index1 = -1;
+    let index2 = -1;
+    words.forEach((word, index) => {
+        if (word === word1 || word === word2) {
+            if (word === word1){
+                index1 = index;
+            }else{
+                index2 = index;
+            }
+            if (index1 !== -1 && index2 !== -1) {
+                ans = Math.min(Math.abs(index1 - index2), ans);
+            }
+        }
+    });
+    return ans;
+};
+
+let words = ["I","am","a","student","from","a","university","in","a","city"], word1 = "a", word2 = "student";
+let result = findClosest(words, word1, word2);
+console.log(result);
+```
+
+如果寻找过程在这个文件中会重复多次，而每次寻找的单词不同，则可以维护一个哈希表记录每个单词的下标列表。遍历一次文件，按照下标递增顺序得到每个单词在文件中出现的所有下标。在寻找单词时，只要得到两个单词的下标列表，使用双指针遍历两个下标链表，即可得到两个单词的最短距离。
+
